--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,33 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
+      <plugin>
+          <groupId>org.openapitools</groupId>
+          <artifactId>openapi-generator-maven-plugin</artifactId>
+          <version>7.8.0</version>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>generate</goal>
+                  </goals>
+                  <phase>generate-sources</phase>
+                  <configuration>
+                      <inputSpec>${project.basedir}/src/main/resources/openapi/I_PoPP_Token_Generation.yaml
+                      </inputSpec>
+                      <generatorName>jaxrs-cxf-client</generatorName>
+                      <cleanupOutput>true</cleanupOutput>
+                      <output>target/generated-sources</output>
+                      <apiPackage>de.servicehealth.popp.api</apiPackage>
+                      <modelPackage>de.servicehealth.popp.model</modelPackage>
+                      <invokerPackage>de.servicehealth.popp.handler</invokerPackage>
+                      <configOptions>
+                          <sourceFolder>/</sourceFolder>
+                          <useJakartaEe>true</useJakartaEe>
+                      </configOptions>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
     </plugins>
   </build>
   <profiles>
