--- a/popp-api/pom.xml
+++ b/popp-api/pom.xml
@@ -108,6 +108,39 @@
               </execution>
           </executions>
       </plugin>
+      <plugin>
+        <groupId>com.google.code.maven-replacer-plugin</groupId>
+        <artifactId>replacer</artifactId>
+        <version>1.5.3</version>
+        <executions>
+            <execution>
+                <id>remove-microprofile-client</id>
+                <phase>generate-sources</phase>
+                <goals>
+                    <goal>replace</goal>
+                </goals>
+            </execution>
+        </executions>
+        <configuration>
+            <basedir>
+                ${project.build.directory}/generated-sources
+            </basedir>
+            <includes>
+                <include>**/*.java</include>
+            </includes>
+            <regex>false</regex>
+            <replacements>
+                <replacement>
+                    <token>import com.fasterxml.jackson.annotation.JsonProperty;</token>
+                    <value>import jakarta.json.bind.annotation.JsonbProperty;</value>
+                </replacement>
+                <replacement>
+                    <token>@JsonProperty(</token>
+                    <value>@JsonbProperty(</value>
+                </replacement>
+            </replacements>
+        </configuration>
+    </plugin>
     </plugins>
   </build>
 </project>
