--- a/server/pom.xml
+++ b/server/pom.xml
@@ -45,6 +45,13 @@
       <artifactId>popp-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- Mockito for unit testing -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.21.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
