Implemented event subscription and calling to popp client when VSD is called

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,3 +13,10 @@ quarkus.container-image.push=false
 quarkus.container-image.group=manuelb86
 quarkus.container-image.name=popp-smartphone-konnektor
 quarkus.container-image.tag=latest
+
+# Example Quarkus config
+quarkus.http.port=8080
+quarkus.log.level=INFO
+quarkus.ssl.native=true
+
+popp.client-url=http://localhost:8080
