Implemented initial systemtests that connects via tls to websocket

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,9 +14,12 @@ quarkus.container-image.group=manuelb86
 quarkus.container-image.name=popp-smartphone-konnektor
 quarkus.container-image.tag=latest
 
-# Example Quarkus config
-quarkus.http.port=8080
+# Quarkus config
 quarkus.log.level=INFO
-quarkus.ssl.native=true
 
 popp.client-url=http://localhost:8080
+
+quarkus.tls.key-store.p12.path=server.p12
+quarkus.tls.key-store.p12.password=secret
+# Reject HTTP requests
+quarkus.http.insecure-requests=disabled
