Added parseStandardScenarioMessage with text

--- a/popp-api/pom.xml
+++ b/popp-api/pom.xml
@@ -121,9 +121,7 @@
             </execution>
         </executions>
         <configuration>
-            <basedir>
-                ${project.build.directory}/generated-sources
-            </basedir>
+            <basedir>${project.build.directory}/generated-sources</basedir>
             <includes>
                 <include>**/*.java</include>
             </includes>
