--- a/ehcl-api/pom.xml
+++ b/ehcl-api/pom.xml
@@ -122,9 +122,7 @@
             </execution>
         </executions>
         <configuration>
-            <basedir>
-                ${project.build.directory}/generated-sources
-            </basedir>
+            <basedir>${project.build.directory}/generated-sources</basedir>
             <includes>
                 <include>**/*.java</include>
             </includes>
