--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>ehcl-api</module>
     <module>popp-api</module>
     <module>server</module>
+    <module>systemtests</module>
   </modules>
   <dependencyManagement>
     <dependencies>
