Completed full implementation of Cardlink over PoPP backend including mock of e-prescriptions

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,7 +17,8 @@ quarkus.container-image.tag=latest
 # Quarkus config
 quarkus.log.level=INFO
 
-popp.client-url=http://localhost:8080
+popp.client-url=http://localhost:8081
+quarkus.http.ssl-port=9443
 
 quarkus.tls.key-store.p12.path=server.p12
 quarkus.tls.key-store.p12.password=secret
