--- a/systemtests/pom.xml
+++ b/systemtests/pom.xml
@@ -20,6 +20,17 @@
 			<artifactId>popp-smartphone-konnektor-server</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<!-- Bouncy Castle dependencies -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>1.83</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk18on</artifactId>
+			<version>1.83</version>
+		</dependency>
 
 		<!-- Typrus WebSocket Client -->
 		<dependency>
@@ -75,6 +86,7 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.5.6</version>
 		</dependency>
+		
 
 		<!-- JUnit 5 -->
 		<dependency>
